2apl/resources/tests/Good/External Environment/exampleEnvMAS.mas
myAgent : exampleEnvAgent.2apl 1 @exampleEnv
