2apl/resources/tests/Bad/Erronous Environment/test.mas
test: agent.2apl @error
